--- a/training_optiver_trading_at_the_close.ipynb
+++ b/training_optiver_trading_at_the_close.ipynb
@@ -2,38 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Built-in modules\n",
     "import os\n",
+    "import warnings\n",
+    "from tqdm import tqdm \n",
     "\n",
-    "def setup_kaggle(kaggle_json_path):\n",
-    "    # Check if ~/.kaggle directory exists\n",
-    "    if not os.path.exists(os.path.expanduser(\"~/.kaggle\")):\n",
-    "        print(\"Creating ~/.kaggle directory...\")\n",
-    "        !mkdir -p ~/.kaggle\n",
+    "# External modules\n",
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "    # Check if kaggle.json is in the correct place and move it if not\n",
-    "    if not os.path.exists(os.path.expanduser(\"~/.kaggle/kaggle.json\")):\n",
-    "        print(\"Moving kaggle.json to ~/.kaggle...\")\n",
-    "        !mv {kaggle_json_path} ~/.kaggle/\n",
+    "# Custom modules\n",
+    "from src.utils.utils_kaggle import get_data\n",
+    "from src.utils.utils_general import get_project_directory, load_config\n",
+    "from src.experiments.mlflow_optuna_init import initialize_mlflow, initialize_optuna\n",
+    "from src.validation.cv_setup import initialize_cv_method\n",
+    "from src.experiments.optuna_objective import objective\n",
     "\n",
-    "    # Check and set permissions for kaggle.json\n",
-    "    file_stat = os.stat(os.path.expanduser(\"~/.kaggle/kaggle.json\")).st_mode\n",
-    "    if not (file_stat & 0o600 == 0o600):\n",
-    "        print(\"Setting permissions for kaggle.json...\")\n",
-    "        !chmod 600 ~/.kaggle/kaggle.json\n",
-    "    \n",
-    "    # Check if kaggle package is installed\n",
-    "    try:\n",
-    "        import kaggle\n",
-    "        print(\"Kaggle package is already installed.\")\n",
-    "    except ImportError:\n",
-    "        print(\"Installing Kaggle package...\")\n",
-    "        !pip install -q kaggle\n",
+    "# Suppress warnings\n",
+    "warnings.filterwarnings('ignore', category=FutureWarning)\n",
+    "warnings.filterwarnings('ignore', category=UserWarning)\n",
     "\n",
-    "# Rest of the code remains the same\n"
+    "# Auto-reload modules\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -42,46 +58,152 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_directories(dir_path):\n",
-    "    if not os.path.exists(dir_path):\n",
-    "        print(f\"Creating directory {dir_path}...\")\n",
-    "        !mkdir -p {dir_path}\n",
-    "    else:\n",
-    "        print(f\"Directory {dir_path} already exists.\")\n",
-    "\n",
-    "def download_data(competition_name, dest_folder, specific_file=None):\n",
-    "    if specific_file:\n",
-    "        print(f\"Downloading specific file {specific_file} from {competition_name}...\")\n",
-    "        !kaggle competitions download -c {competition_name} -f {specific_file} -p {dest_folder}\n",
-    "    else:\n",
-    "        print(f\"Downloading all files from {competition_name}...\")\n",
-    "        !kaggle competitions download -c {competition_name} -p {dest_folder}\n",
-    "        !unzip {dest_folder}/{competition_name}.zip -d {dest_folder} > /dev/null\n",
-    "        !rm {dest_folder}/{competition_name}.zip\n",
-    "\n",
-    "def get_data(kaggle_json_path, dest_folder, competition_name, specific_file=None):\n",
-    "    # Setup Kaggle\n",
-    "    setup_kaggle(kaggle_json_path)\n",
-    "\n",
-    "    # Make directories\n",
-    "    make_directories(dest_folder)\n",
-    "\n",
-    "    # Download data\n",
-    "    download_data(competition_name, dest_folder, specific_file)"
+    "path_project_directory = get_project_directory()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/10/21 08:50:04 INFO mlflow.tracking.fluent: Experiment with name 'Default_Experiment' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/sam/.kaggle/kaggle.json'\n",
+      "Kaggle package is already installed.\n",
+      "Directory /home/sam/github/mlops-hub/data/kaggle_optiver_trading_at_the_close already exists.\n",
+      "File XTrIntCmpNewFtre.parquet already exists. Skipping download.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2023-10-21 08:50:04,746] A new study created in RDB with name: Default_Study_Name\n"
+     ]
+    }
+   ],
    "source": [
-    "# Define the path to your kaggle.json and other parameters\n",
+    "# Load configuration\n",
+    "config_path = os.path.join(path_project_directory, \"config/train_config.yaml\")\n",
+    "config = load_config(config_path)\n",
+    "\n",
+    "# Define paths\n",
+    "dataset_path = os.path.join(\n",
+    "    path_project_directory, \"data/processed/synthetic_ticker_data.csv\"\n",
+    ")\n",
+    "path_experiments_storage = os.path.join(\n",
+    "    path_project_directory, \"data/experiments_storage\"\n",
+    ")\n",
+    "\n",
+    "# Kaggle dataset parameters\n",
     "kaggle_json_path = \"/home/sam/github/kaggle.json\"\n",
     "dest_folder = \"/home/sam/github/mlops-hub/data/kaggle_optiver_trading_at_the_close\"\n",
-    "competition_name = \"optiver-realized-volatility-prediction\"\n",
-    "specific_file = \"/kaggle/input/optiver-memoryreduceddatasets/XTrIntCmpNewFtre.parquet\"\n"
+    "dataset_name = \"ravi20076/optiver-memoryreduceddatasets\"\n",
+    "specific_file = \"XTrIntCmpNewFtre.parquet\"\n",
+    "\n",
+    "# Download data from Kaggle\n",
+    "get_data(\n",
+    "    kaggle_json_path,\n",
+    "    dest_folder,\n",
+    "    dataset_name=dataset_name,\n",
+    "    specific_file=specific_file,\n",
+    ")\n",
+    "\n",
+    "# Initialize MLFlow and Optuna\n",
+    "initialize_mlflow(path_experiments_storage, config)\n",
+    "study = initialize_optuna(path_experiments_storage, config)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# testing\n",
+    "debug = True\n",
+    "testing_sample = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X:(1000, 52), y:1000\n",
+      "CPU times: user 3.02 s, sys: 2.33 s, total: 5.35 s\n",
+      "Wall time: 1.74 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time \n",
+    "if debug:\n",
+    "    X = pd.read_parquet(path_project_directory + 'data/kaggle_optiver_trading_at_the_close/XTrIntCmpNewFtre.parquet').sample(n = testing_sample)\n",
+    "else:\n",
+    "    X = pd.read_parquet(path_project_directory + 'data/kaggle_optiver_trading_at_the_close/XTrIntCmpNewFtre.parquet')\n",
+    "    \n",
+    "y = pd.read_parquet(path_project_directory + \"data/kaggle_optiver_trading_at_the_close/Ytrain.parquet\").loc[X.index].squeeze()\n",
+    "X.index, y.index = range(len(X)), range(len(y))\n",
+    "print(f\"X:{X.shape}, y:{y.shape[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_splits = 3\n",
+    "n_test_splits = 1\n",
+    "embargo_td = 100\n",
+    "\n",
+    "state = 42\n",
+    "\n",
+    "cv_mthd = \"KF\"  # \"KF\" or \"PurgedKF\"\n",
+    "n_repeats = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.validation.model_validation import CombPurgedKFoldCV\n",
+    "from sklearn.model_selection import (\n",
+    "    KFold,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_cv = {\"KF\": KFold(n_splits=n_splits, shuffle=True, random_state=state)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -89,12 +211,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for fold_nb, (train_idx, dev_idx) in tqdm(\n",
+    "    enumerate(cv.split(X, y)), f\"{cv_mthd} CV {n_splits}x{n_repeats}\"\n",
+    "):\n",
+    "    # Creating the cv folds:-\n",
+    "    Xtr = X.iloc[train_idx]\n",
+    "    Xdev = X.iloc[dev_idx]\n",
+    "    ytr = y.iloc[train_idx]\n",
+    "    ydev = y.iloc[dev_idx]\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Call the function to get data\n",
-    "get_data(kaggle_json_path, dest_folder, competition_name, specific_file)\n"
+    "    print(f\"Fold {fold_nb} - Train: {Xtr.shape}, Dev: {Xdev.shape}\")"
    ]
   },
   {
@@ -102,53 +228,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import os\n",
-    "from google.colab import files\n",
-    "\n",
-    "def setup_kaggle():\n",
-    "    if not os.path.exists(\"~/.kaggle\"):\n",
-    "        print(\"Installing Kaggle package...\")\n",
-    "        !pip install -q kaggle\n",
-    "    else:\n",
-    "        print(\"Kaggle package is already installed.\")\n",
-    "\n",
-    "    if not os.path.exists(\"kaggle.json\"):\n",
-    "        print(\"Upload your kaggle.json file...\")\n",
-    "        files.upload()\n",
-    "\n",
-    "    !chmod 600 kaggle.json\n",
-    "\n",
-    "def make_directories(dir_paths):\n",
-    "    for path in dir_paths:\n",
-    "        if not os.path.exists(path):\n",
-    "            print(f\"Creating directory {path}...\")\n",
-    "            !mkdir -p {path}\n",
-    "        else:\n",
-    "            print(f\"Directory {path} already exists.\")\n",
-    "\n",
-    "def download_data(competition_name, dest_folder):\n",
-    "    print(f\"Downloading {competition_name}...\")\n",
-    "    !kaggle competitions download -c {competition_name}\n",
-    "    !unzip {competition_name}.zip -d {dest_folder} > /dev/null\n",
-    "    !rm {competition_name}.zip\n",
-    "\n",
-    "def get_data():\n",
-    "    # Setup Kaggle\n",
-    "    setup_kaggle()\n",
-    "\n",
-    "    # Make directories\n",
-    "    dirs_to_create = [\n",
-    "        \"/content/drive/MyDrive/GitHub_Repositories/Kaggle_Competitions/data\",\n",
-    "        \"/content/drive/MyDrive/GitHub_Repositories/Kaggle_Competitions/data/jpx-tokyo-stock-exchange-prediction\"\n",
-    "    ]\n",
-    "    make_directories(dirs_to_create)\n",
-    "\n",
-    "    # Download data\n",
-    "    download_data(\"jpx-tokyo-stock-exchange-prediction\", dirs_to_create[-1])\n",
-    "\n",
-    "# Call the function to get data\n",
-    "get_data()\n"
+    "cv = CombPurgedKFoldCV(\n",
+    "    n_splits=n_splits, n_test_splits=n_test_splits, embargo_td=embargo_td\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object CombPurgedKFoldCV.split at 0x7f33a8512650>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.split(X, y)"
    ]
   },
   {
@@ -156,20 +266,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_data():\n",
-    "    !mkdir  /content/drive/MyDrive/GitHub_Repositories/Kaggle_Competitions/data\n",
-    "    !mkdir  /content/drive/MyDrive/GitHub_Repositories/Kaggle_Competitions/data/jpx-tokyo-stock-exchange-prediction\n",
-    "    !pip install -q kaggle\n",
-    "    from google.colab import files\n",
-    "    up = files.upload()\n",
-    "    !chmod 600 kaggle.json\n",
-    "    !kaggle competitions download -c jpx-tokyo-stock-exchange-prediction\n",
-    "    !unzip jpx-tokyo-stock-exchange-prediction.zip -d /content/drive/MyDrive/GitHub_Repositories/Kaggle_Competitions/data/jpx-tokyo-stock-exchange-prediction > /dev/null\n",
-    "    !rm jpx-tokyo-stock-exchange-prediction.zip\n",
-    "\n",
-    "get_data()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
