--- a/training_optiver_trading_at_the_close.ipynb
+++ b/training_optiver_trading_at_the_close.ipynb
@@ -6,15 +6,22 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "Kaggle package is already installed.\n",
-      "Directory /home/sam/github/mlops-hub/data/kaggle_optiver_trading_at_the_close already exists.\n",
-      "File XTrIntCmpNewFtre.parquet already exists. Skipping download.\n"
+      "/home/sam/miniconda3/envs/training/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -24,6 +31,7 @@
     "\n",
     "# External general-purpose modules\n",
     "import pandas as pd\n",
+    "import numpy as np \n",
     "from dotenv import load_dotenv\n",
     "from tqdm import tqdm\n",
     "from termcolor import colored\n",
@@ -42,9 +50,6 @@
     "from src.utils.utils_kaggle import get_data\n",
     "from src.utils.utils_general import get_project_directory, load_config\n",
     "from src.experiments.mlflow_optuna_init import initialize_mlflow, initialize_optuna\n",
-    "from src.validation.cv_setup import initialize_cv_method\n",
-    "from src.experiments.optuna_objective import objective\n",
-    "from src.validation.model_validation import CombPurgedKFoldCV\n",
     "\n",
     "# Suppress warnings\n",
     "warnings.filterwarnings('ignore', category=FutureWarning)\n",
@@ -55,26 +60,51 @@
     "%autoreload 2\n",
     "\n",
     "# Load environment variables\n",
-    "load_dotenv()\n",
-    "\n",
+    "load_dotenv()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get project directory and load configuration\n",
     "path_project_directory = get_project_directory()\n",
     "config_path = os.path.join(path_project_directory, \"config/train_config.yaml\")\n",
     "config = load_config(config_path)\n",
     "\n",
     "# Define paths\n",
-    "dataset_path = os.path.join(path_project_directory, \"data/processed/synthetic_ticker_data.csv\")\n",
-    "path_experiments_storage = os.path.join(path_project_directory, \"data/experiments_storage\")\n",
+    "dataset_path = os.path.join(\n",
+    "    path_project_directory, \"data/processed/synthetic_ticker_data.csv\"\n",
+    ")\n",
+    "path_experiments_storage = os.path.join(\n",
+    "    path_project_directory, \"data/experiments_storage\"\n",
+    ")\n",
     "\n",
     "# Kaggle dataset parameters\n",
     "kaggle_json_path = os.path.join(path_project_directory, \"kaggle.json\")\n",
     "\n",
-    "dest_folder = os.path.join(path_project_directory, \"data/kaggle_optiver_trading_at_the_close\")\n",
+    "dest_folder = os.path.join(\n",
+    "    path_project_directory, \"data/kaggle_optiver_trading_at_the_close\"\n",
+    ")\n",
     "dataset_name = \"ravi20076/optiver-memoryreduceddatasets\"\n",
-    "specific_file = \"XTrIntCmpNewFtre.parquet\"\n",
-    "\n",
+    "specific_file = \"XTrIntCmpNewFtre.parquet\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download data from Kaggle\n",
-    "get_data(kaggle_json_path, dest_folder, dataset_name=dataset_name, specific_file=specific_file)\n",
+    "get_data(\n",
+    "    kaggle_json_path,\n",
+    "    dest_folder,\n",
+    "    dataset_name=dataset_name,\n",
+    "    specific_file=specific_file,\n",
+    ")\n",
     "\n",
     "# Initialize MLFlow and Optuna\n",
     "initialize_mlflow(path_experiments_storage, config)\n",
@@ -84,50 +114,94 @@
     "optuna.logging.set_verbosity(optuna.logging.WARNING)\n",
     "\n",
     "# Configure Loguru\n",
-    "logger.add(\"objective_logs.log\", format=\"{time:YYYY-MM-DD HH:mm:ss} | {level} | {message}\")\n",
+    "logger.add(\n",
+    "    \"objective_logs.log\", format=\"{time:YYYY-MM-DD HH:mm:ss} | {level} | {message}\"\n",
+    ")\n",
     "\n",
     "# Initialize MLflow callback\n",
-    "mlflow_callback = MLflowCallback(tracking_uri=mlflow.get_tracking_uri(), metric_name=\"mae\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/sam/github/mlops-hub/../kaggle.json'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kaggle_json_path"
+    "mlflow_callback = MLflowCallback(\n",
+    "    tracking_uri=mlflow.get_tracking_uri(), metric_name=\"mae\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/sam/github/mlops-hub'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.path.dirname(path_project_directory)"
+    "def generate_features(df):\n",
+    "    features = [\n",
+    "        \"seconds_in_bucket\",\n",
+    "        \"imbalance_buy_sell_flag\",\n",
+    "        \"imbalance_size\",\n",
+    "        \"matched_size\",\n",
+    "        \"bid_size\",\n",
+    "        \"ask_size\",\n",
+    "        \"reference_price\",\n",
+    "        \"far_price\",\n",
+    "        \"near_price\",\n",
+    "        \"ask_price\",\n",
+    "        \"bid_price\",\n",
+    "        \"wap\",\n",
+    "        \"imb_s1\",\n",
+    "        \"imb_s2\",\n",
+    "    ]\n",
+    "\n",
+    "    df[\"imb_s1\"] = df.eval(\"(bid_size-ask_size)/(bid_size+ask_size)\")\n",
+    "    df[\"imb_s2\"] = df.eval(\n",
+    "        \"(imbalance_size-matched_size)/(matched_size+imbalance_size)\"\n",
+    "    )\n",
+    "\n",
+    "    prices = [\n",
+    "        \"reference_price\",\n",
+    "        \"far_price\",\n",
+    "        \"near_price\",\n",
+    "        \"ask_price\",\n",
+    "        \"bid_price\",\n",
+    "        \"wap\",\n",
+    "    ]\n",
+    "\n",
+    "    for i, a in enumerate(prices):\n",
+    "        for j, b in enumerate(prices):\n",
+    "            if i > j:\n",
+    "                df[f\"{a}_{b}_imb\"] = df.eval(f\"({a}-{b})/({a}+{b})\")\n",
+    "                features.append(f\"{a}_{b}_imb\")\n",
+    "\n",
+    "    for i, a in enumerate(prices):\n",
+    "        for j, b in enumerate(prices):\n",
+    "            for k, c in enumerate(prices):\n",
+    "                if i > j and j > k:\n",
+    "                    max_ = df[[a, b, c]].max(axis=1)\n",
+    "                    min_ = df[[a, b, c]].min(axis=1)\n",
+    "                    mid_ = df[[a, b, c]].sum(axis=1) - min_ - max_\n",
+    "\n",
+    "                    df[f\"{a}_{b}_{c}_imb2\"] = (max_ - mid_) / (mid_ - min_)\n",
+    "                    features.append(f\"{a}_{b}_{c}_imb2\")\n",
+    "\n",
+    "    return df[features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.read_csv(\n",
+    "    os.path.join(\n",
+    "        path_project_directory, \"data/kaggle_optiver_trading_at_the_close/train.csv\"\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ = generate_features(df_train)"
    ]
   },
   {
@@ -135,41 +209,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import optiver2023\n",
+    "\n",
+    "env = optiver2023.make_env()\n",
+    "iter_test = env.iter_test()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sam/miniconda3/envs/training/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "[I 2023-10-21 11:03:39,712] Using an existing study with name 'Default_Study_Name' instead of creating a new one.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/sam/.kaggle/kaggle.json'\n",
-      "Kaggle package is already installed.\n",
-      "Directory /home/sam/github/mlops-hub/data/kaggle_optiver_trading_at_the_close already exists.\n",
-      "File XTrIntCmpNewFtre.parquet already exists. Skipping download.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_148752/2375695542.py:69: ExperimentalWarning: MLflowCallback is experimental (supported from v1.4.0). The interface can change in the future.\n",
-      "  mlflow_callback = MLflowCallback(tracking_uri=mlflow.get_tracking_uri(), metric_name=\"mae\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "counter = 0\n",
+    "for test, revealed_targets, sample_prediction in iter_test:\n",
+    "    feat = generate_features(test)\n",
+    "\n",
+    "    sample_prediction[\"target\"] = np.mean([model.predict(feat) for model in models], 0)\n",
+    "    env.predict(sample_prediction)\n",
+    "    counter += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.read_csv( path_project_directory'/kaggle/input/optiver-trading-at-the-close/train.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Constants and Settings\n",
     "debug = True\n",
@@ -238,9 +313,46 @@
     "    )\n",
     "}\n",
     "\n",
-    "model = dict_models[model_mthd]\n",
-    "\n",
-    "\n",
+    "model = dict_models[model_mthd]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2023-10-21 11:19:32.267\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1m\u001b[34m------------------------------------------------\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:32.268\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1m\u001b[32mTrial 78   | n_estimators: 150  | learning_rate: 0.010518498605383094\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:32.269\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m19\u001b[0m - \u001b[1mFold  |  MAE                 \u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:32.269\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m20\u001b[0m - \u001b[1m----- |  --------------------\u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:32.343\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m1     |  6.346515089764429   \u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:32.409\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m2     |  6.544533798190073   \u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:32.475\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m3     |  6.148576132486202   \u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:32.476\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m42\u001b[0m - \u001b[33m\u001b[1m\u001b[33mAverage MAE: 6.3465416734802345\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:33.632\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1m\u001b[34m------------------------------------------------\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:33.633\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1m\u001b[32mTrial 79   | n_estimators: 160  | learning_rate: 0.011309922201427684\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:33.634\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m19\u001b[0m - \u001b[1mFold  |  MAE                 \u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:33.634\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m20\u001b[0m - \u001b[1m----- |  --------------------\u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:33.716\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m1     |  6.343971676259951   \u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:33.789\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m2     |  6.536933882826917   \u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:33.862\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m3     |  6.147778492465223   \u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:33.863\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m42\u001b[0m - \u001b[33m\u001b[1m\u001b[33mAverage MAE: 6.342894683850697\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:34.937\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1m\u001b[34m------------------------------------------------\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:34.938\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1m\u001b[32mTrial 80   | n_estimators: 163  | learning_rate: 0.011843046604696643\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:34.938\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m19\u001b[0m - \u001b[1mFold  |  MAE                 \u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:34.939\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m20\u001b[0m - \u001b[1m----- |  --------------------\u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:35.017\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m1     |  6.343743623381834   \u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:35.088\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m2     |  6.5434227035141745  \u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:35.160\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m3     |  6.132559182870816   \u001b[0m\n",
+      "\u001b[32m2023-10-21 11:19:35.161\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m42\u001b[0m - \u001b[33m\u001b[1m\u001b[33mAverage MAE: 6.339908503255607\u001b[0m\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
     "def objective(trial, X, y):\n",
     "    try:\n",
     "        with mlflow.start_run() as run:\n",
@@ -302,18 +414,11 @@
     "study = optuna.create_study(\n",
     "    direction=\"minimize\",\n",
     "    study_name=\"Your Study Name\",\n",
-    "    storage=\"sqlite:///example.db\",\n",
+    "    storage=\"sqlite:///data/optuna.db\",\n",
     "    load_if_exists=True,\n",
     ")\n",
     "study.optimize(lambda trial: objective(trial, X, y), n_trials=3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
