--- a/training_optiver_trading_at_the_close.ipynb
+++ b/training_optiver_trading_at_the_close.ipynb
@@ -2,17 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sam/miniconda3/envs/training/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/tmp/ipykernel_167977/1403246240.py:47: ExperimentalWarning: MLflowCallback is experimental (supported from v1.4.0). The interface can change in the future.\n",
-      "  mlflow_callback = MLflowCallback(\n"
+      "2023/10/21 21:25:05 INFO mlflow.tracking.fluent: Experiment with name 'Default_Experiment2' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2023-10-21 21:25:34.005\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m143\u001b[0m - \u001b[1m\u001b[34m------------------------------------------------\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:34.006\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m146\u001b[0m - \u001b[1m\u001b[32mTrial 6    | n_estimators: 237  | learning_rate: 0.08549053734229291\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:34.007\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m153\u001b[0m - \u001b[1mFold  |  MAE                 \u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:34.008\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m154\u001b[0m - \u001b[1m----- |  --------------------\u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:34.102\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m173\u001b[0m - \u001b[1m1     |  6.5699646311969335  \u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:34.199\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m173\u001b[0m - \u001b[1m2     |  6.220175976074886   \u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:34.292\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m173\u001b[0m - \u001b[1m3     |  6.667523581686927   \u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:34.293\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m176\u001b[0m - \u001b[33m\u001b[1m\u001b[33mAverage MAE: 6.485888062986248\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:35.608\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m143\u001b[0m - \u001b[1m\u001b[34m------------------------------------------------\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:35.609\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m146\u001b[0m - \u001b[1m\u001b[32mTrial 7    | n_estimators: 494  | learning_rate: 0.013107418093234924\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:35.610\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m153\u001b[0m - \u001b[1mFold  |  MAE                 \u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:35.610\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m154\u001b[0m - \u001b[1m----- |  --------------------\u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:35.788\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m173\u001b[0m - \u001b[1m1     |  6.59951932121003    \u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:35.953\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m173\u001b[0m - \u001b[1m2     |  6.224380023957826   \u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:36.151\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m173\u001b[0m - \u001b[1m3     |  6.681089849027159   \u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:36.153\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m176\u001b[0m - \u001b[33m\u001b[1m\u001b[33mAverage MAE: 6.501663064731672\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:37.228\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m143\u001b[0m - \u001b[1m\u001b[34m------------------------------------------------\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:37.229\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m146\u001b[0m - \u001b[1m\u001b[32mTrial 8    | n_estimators: 326  | learning_rate: 0.029206515853172355\u001b[0m\u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:37.229\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m153\u001b[0m - \u001b[1mFold  |  MAE                 \u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:37.229\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m154\u001b[0m - \u001b[1m----- |  --------------------\u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:37.369\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m173\u001b[0m - \u001b[1m1     |  6.599252611177796   \u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:37.482\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m173\u001b[0m - \u001b[1m2     |  6.2246249933223154  \u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:37.618\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m173\u001b[0m - \u001b[1m3     |  6.683158283630053   \u001b[0m\n",
+      "\u001b[32m2023-10-21 21:25:37.619\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m176\u001b[0m - \u001b[33m\u001b[1m\u001b[33mAverage MAE: 6.502345296043388\u001b[0m\u001b[0m\n"
      ]
     }
    ],
@@ -41,7 +76,7 @@
     "# Custom modules\n",
     "from src.utils.utils_kaggle import get_data\n",
     "from src.utils.utils_general import get_project_directory, load_config\n",
-    "from src.experiments.mlflow_optuna_init import initialize_mlflow, initialize_optuna\n",
+    "from src.experiments.mlflow_optuna_init import initialize_optuna\n",
     "from src.feat_engineering.fe_opriver_trading_at_the_close import generate_features\n",
     "# Suppress warnings\n",
     "warnings.filterwarnings('ignore', category=FutureWarning)\n",
@@ -62,18 +97,12 @@
     "    \"objective_logs.log\", format=\"{time:YYYY-MM-DD HH:mm:ss} | {level} | {message}\"\n",
     ")\n",
     "\n",
+    "\n",
     "# Initialize MLflow callback\n",
     "mlflow_callback = MLflowCallback(\n",
     "    tracking_uri=mlflow.get_tracking_uri(), metric_name=\"mae\"\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "name_folder_data_project = \"kaggle_optiver_trading_at_the_close\"\n",
     "\n",
     "file_name_df_train = \"train.csv\"\n",
@@ -104,15 +133,7 @@
     "        path_data_project_dir,\n",
     "        dataset_name=dataset_name,\n",
     "        specific_file=None,\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    )\n",
     "# Constants and Settings\n",
     "debug = True\n",
     "testing_sample = 1000\n",
@@ -124,36 +145,12 @@
     "cv_mthd = \"KF\"  # \"KF\" or \"PurgedKF\"\n",
     "n_repeats = 1\n",
     "model_mthd = \"LGBMR\"\n",
-    "nbrnd_erly_stp = 1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize MLFlow and Optuna\n",
-    "initialize_mlflow(path_experiments_storage, config)\n",
-    "study = initialize_optuna(path_experiments_storage, config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "nbrnd_erly_stp = 1000\n",
+    "mlflow.set_tracking_uri(path_experiments_storage)\n",
+    "mlflow.set_experiment(config.get('experiment_name', 'Default_Experiment2'))\n",
+    "study = initialize_optuna(path_experiments_storage, config)\n",
     "df_train_raw = pd.read_csv(path_dataset_train)\n",
-    "df_test_raw = pd.read_csv(path_dataset_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_test_raw = pd.read_csv(path_dataset_test)\n",
     "df_train = generate_features(df_train_raw)\n",
     "\n",
     "if debug:\n",
@@ -161,24 +158,8 @@
     "else:\n",
     "    X_train = df_train.copy()\n",
     "\n",
-    "y_train = df_train_raw[\"target\"].loc[X_train.index].squeeze()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del df_train_raw, df_test_raw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "y_train = df_train_raw[\"target\"].loc[X_train.index].squeeze()\n",
+    "del df_train_raw, df_test_raw\n",
     "# Cross-Validation Setup\n",
     "all_cv = {\"KF\": KFold(n_splits=n_splits, shuffle=True, random_state=state)}\n",
     "cv = all_cv[cv_mthd]\n",
@@ -203,46 +184,8 @@
     "    )\n",
     "}\n",
     "\n",
-    "model = dict_models[model_mthd]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2023-10-21 19:00:47.770\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1m\u001b[34m------------------------------------------------\u001b[0m\u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:47.771\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1m\u001b[32mTrial 0    | n_estimators: 377  | learning_rate: 0.01656645103012528\u001b[0m\u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:47.771\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m19\u001b[0m - \u001b[1mFold  |  MAE                 \u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:47.772\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m20\u001b[0m - \u001b[1m----- |  --------------------\u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:48.011\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m1     |  7.170174783797143   \u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:48.162\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m2     |  5.989771672018002   \u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:48.308\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m3     |  5.94107214575781    \u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:48.309\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m42\u001b[0m - \u001b[33m\u001b[1m\u001b[33mAverage MAE: 6.367006200524319\u001b[0m\u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:49.708\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1m\u001b[34m------------------------------------------------\u001b[0m\u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:49.708\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1m\u001b[32mTrial 1    | n_estimators: 491  | learning_rate: 0.01015864052570743\u001b[0m\u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:49.709\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m19\u001b[0m - \u001b[1mFold  |  MAE                 \u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:49.709\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m20\u001b[0m - \u001b[1m----- |  --------------------\u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:49.895\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m1     |  7.194051327178422   \u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:50.082\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m2     |  5.980985996250867   \u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:50.266\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m3     |  5.916901247973383   \u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:50.267\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m42\u001b[0m - \u001b[33m\u001b[1m\u001b[33mAverage MAE: 6.36397952380089\u001b[0m\u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:51.326\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1m\u001b[34m------------------------------------------------\u001b[0m\u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:51.327\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1m\u001b[32mTrial 2    | n_estimators: 229  | learning_rate: 0.03875598180096347\u001b[0m\u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:51.327\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m19\u001b[0m - \u001b[1mFold  |  MAE                 \u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:51.328\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m20\u001b[0m - \u001b[1m----- |  --------------------\u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:51.419\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m1     |  7.20832448992964    \u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:51.508\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m2     |  5.978453888322339   \u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:51.599\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1m3     |  5.925857552615515   \u001b[0m\n",
-      "\u001b[32m2023-10-21 19:00:51.600\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mobjective\u001b[0m:\u001b[36m42\u001b[0m - \u001b[33m\u001b[1m\u001b[33mAverage MAE: 6.370878643622498\u001b[0m\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
+    "model = dict_models[model_mthd]\n",
+    "\n",
     "def objective(trial, X, y):\n",
     "    try:\n",
     "        with mlflow.start_run() as run:\n",
@@ -304,10 +247,11 @@
     "study = optuna.create_study(\n",
     "    direction=\"minimize\",\n",
     "    study_name=\"Your Study Name\",\n",
-    "    storage=\"sqlite:///data/kaggle_optiver_trading_at_the_close/optuna.db\",\n",
+    "    storage=\"sqlite:///data/kaggle_optiver_trading_at_the_close/experiments_storage/optuna.db\",\n",
     "    load_if_exists=True,\n",
     ")\n",
-    "study.optimize(lambda trial: objective(trial, X_train, y_train), n_trials=3)"
+    "study.optimize(lambda trial: objective(trial, X_train, y_train), n_trials=3)\n",
+    "\n"
    ]
   },
   {
